# logger-rs

./: Cargo.toml
src/: lib.rs
tests/: Cargo.toml
tests/src/: main.rs
