[package]
name = "logger_rs"
version = "0.1.0"
authors = ["HidemaruOwO"]
description = "A Custom logging library for Rust language"
repository = "https://github.com/HidemaruOwO/logger-rs"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"

[lib]
path = "src/lib.rs"
